# Lego_Interligence

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_DISCUSSION.md  Dockerfile  EXECUTIVE_SUMMARY.md  INTEGRATION_GUIDE.md  LLM_ENGINE_SUMMARY.md  Makefile  ORCHESTRATOR_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  RENDERING_ASSEMBLY_FIX.md  RENDERING_ERRORS_FIX.md  STATUS.md  TECHNICAL_SPEC.md  USAGE_EXAMPLE.md  VALIDATION_FIX_SUMMARY.md  VISUALIZATION_FIX_GUIDE.md  debug_pattern.py  demo.py  demo_llm.py  demo_orchestrator.py  docker-compose.yml  install.sh  pyproject.toml  quick_test.py  render.yaml  run_docker.sh  run_web.py  setup_env.sh  test.sh  test_llm_engine.py  test_orchestrator.py  test_visualization_fixes.py
.github/workflows/: test.yml
lego_architect/: __init__.py  config.py
lego_architect/core/: __init__.py  data_structures.py
lego_architect/llm/: __init__.py  engine.py
lego_architect/orchestrator/: __init__.py  coordinator.py
lego_architect/patterns/: __init__.py  library.py
lego_architect/services/: __init__.py  lego_library_service.py
lego_architect/validation/: __init__.py  validator.py
lego_architect/web/: __init__.py  app.py
lego_architect/web/routes/: __init__.py  builds.py  export.py  generate.py  library.py  patterns.py  validation.py
lego_architect/web/static/: assembly_ui_enhancements.js  assembly_ui_styles.css  index.html  lego_geometry.js  lego_geometry_optimized.js  lego_renderer.js  lego_renderer_optimized.js
tests/: __init__.py  test_data_structures.py  test_validation.py
